💡feat: update page BorrowBook.js